@@ -500,7 +500,7 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
 
     @Override
     public List<DialogContext> getDialogsContexts() {
-        return dialogProcessors.values().stream().map(DialogProcessor::getContext).collect(Collectors.toList());
+        return dialogProcessors.values().stream().map(DialogProcessor::getContext).toList();
     }
 
     @Override
@@ -900,30 +900,27 @@ public class VoiceManagerImpl implements VoiceManager, ConfigOptionProvider, Dia
                 case CONFIG_DEFAULT_HLI:
                     return humanLanguageInterpreters.values().stream()
                             .sorted((hli1, hli2) -> hli1.getLabel(locale).compareToIgnoreCase(hli2.getLabel(locale)))
-                            .map(hli -> new ParameterOption(hli.getId(), hli.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(hli -> new ParameterOption(hli.getId(), hli.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_KS:
                     return ksServices.values().stream()
                             .sorted((ks1, ks2) -> ks1.getLabel(locale).compareToIgnoreCase(ks2.getLabel(locale)))
-                            .map(ks -> new ParameterOption(ks.getId(), ks.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(ks -> new ParameterOption(ks.getId(), ks.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_STT:
                     return sttServices.values().stream()
                             .sorted((stt1, stt2) -> stt1.getLabel(locale).compareToIgnoreCase(stt2.getLabel(locale)))
-                            .map(stt -> new ParameterOption(stt.getId(), stt.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(stt -> new ParameterOption(stt.getId(), stt.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_TTS:
                     return ttsServices.values().stream()
                             .sorted((tts1, tts2) -> tts1.getLabel(locale).compareToIgnoreCase(tts2.getLabel(locale)))
-                            .map(tts -> new ParameterOption(tts.getId(), tts.getLabel(locale)))
-                            .collect(Collectors.toList());
+                            .map(tts -> new ParameterOption(tts.getId(), tts.getLabel(locale))).toList();
                 case CONFIG_DEFAULT_VOICE:
                     Locale nullSafeLocale = locale != null ? locale : localeProvider.getLocale();
-                    return getAllVoicesSorted(nullSafeLocale).stream().filter(v -> getTTS(v) != null)
-                            .map(v -> new ParameterOption(v.getUID(),
-                                    String.format("%s - %s - %s", getTTS(v).getLabel(nullSafeLocale),
-                                            v.getLocale().getDisplayName(nullSafeLocale), v.getLabel())))
-                            .collect(Collectors.toList());
+                    return getAllVoicesSorted(nullSafeLocale)
+                            .stream().filter(v -> getTTS(v) != null).map(
+                                    v -> new ParameterOption(v.getUID(),
+                                            String.format("%s - %s - %s", getTTS(v).getLabel(nullSafeLocale),
+                                                    v.getLocale().getDisplayName(nullSafeLocale), v.getLabel())))
+                            .toList();
             }
         }
         return null;
